# gstation-edit

./: .gitignore  CHANGELOG.md  README.md  TODO.md  gstation-edit  gstation-edit.desktop  setup.cfg  setup.py  setup_script.py  sniffer.py  test.py
gstation_edit/: app.py  gstation-edit  jstation_interface.py  main_window.py  midi_select_dlg.py  program.py  utilities_dlg.py
gstation_edit/messages/: __init__.py  bank_dump.py  bank_dump_req.py  end_bank_dump_resp.py  jstation_sysex_event.py  jstation_sysex_req.py  jstation_sysex_resp.py  notify_store.py  notify_utility.py  one_prg_dump.py  one_prg_req.py  one_prg_resp.py  prg_indices_req.py  prg_indices_resp.py  prg_resp.py  program.py  receive_prg_update.py  receive_prg_update_req.py  receive_prg_update_resp.py  reload_prg.py  request_prg_update.py  request_prg_update_req.py  start_bank_dump_resp.py  to_msg_resp.py  utility_settings_req.py  utility_settings_resp.py  who_am_i_req.py  who_am_i_resp.py
gstation_edit/midi/: __init__.py  cc_event.py  event.py  event_factory.py  event_resp_factory.py  port.py  prg_change_event.py  split_bytes.py  sysex_buffer.py  sysex_event.py
gstation_edit/rack/: __init__.py  amp.py  compress_gate.py  delay.py  effect.py  rack.py  rack_unit.py  reverb.py  wah_expression.py  wha_expression.py
gstation_edit/resources/: #gstation-edit-one-window.ui#  gstation-edit-one-window.ui
gstation_edit/ui_core/: __init__.py  btn_parameter.py  cbx_parameter.py  grp_parameter.py  parameter.py  rdbtn_parameter.py  scale_parameter.py
sniffer/: __init__.py  app.py  jstation_sniffer.py  midi_select_dlg.py
test/: __init__.py  amp.py  event_factory.py  event_resp_factory.py  import_bank.py  import_prg.py  jstation_interface.py  split_bytes.py  sysex_event.py  who_am_i_req.py
(+3 files in other folders)
