[metadata]
name = gstation-edit
version = 2.0.0
summary = GTK replacement for Johnson J-Station J-Edit.
author = F Laignel
author_email = fengalin@free.fr
urls = http://github.com/fengalin/gstation-edit/
license = GNU General Public License version 3.0 (GPLv3)
platform = linux

[options]
packages = find:
install_requires =
  pygobject
  pyalsa @ git+https://github.com/fengalin/alsa-python@14f7d8617633ede902f506fdc6bf4cc029a248a7
scripts = gstation-edit

[options.packages.find]
include = gstation_edit*

[options.package_data]
gstation_edit = resources/*
