[metadata]
name = gstation-edit
version = 2.0.2
summary = GTK replacement for Johnson J-Station J-Edit.
author = F Laignel
author_email = fengalin@free.fr
urls = http://github.com/fengalin/gstation-edit/
license = GNU General Public License version 3.0 (GPLv3)
platform = linux

[options]
packages = find:
install_requires =
  pygobject
  pyalsa @ https://github.com/alsa-project/alsa-python/archive/refs/tags/v1.2.7.zip
scripts = gstation-edit

[options.packages.find]
include = gstation_edit*

[options.package_data]
gstation_edit = resources/*
